# youwhatknow

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.beads/: metadata.json
.claude/: youwhatknow.toml
.claude/superpowers/plans/: 2026-03-21-youwhatknow-implementation.md
.github/workflows/: pages.yml
docs/: CNAME  docs.html  index.html
docs/css/: style.css
docs/js/: main.js
docs/superpowers/plans/: 2026-03-21-cli-init-subcommand.md  2026-03-21-parallel-indexing.md  2026-03-21-worktree-aware-registry.md  2026-03-23-setup-command.md  2026-03-23-status-cli.md  2026-03-24-docs-frontend-rewrite.md  2026-04-12-website-redesign.md
docs/superpowers/specs/: 2026-03-21-youwhatknow-design.md  2026-03-22-v2-line-gated-reads-design.md  2026-03-23-auto-update-flake-hash-design.md  2026-03-23-setup-command-design.md  2026-03-23-status-cli-design.md  2026-03-24-docs-frontend-rewrite-design.md  2026-04-12-website-redesign.md
src/: cli.rs  config.rs  daemon.rs  hooks.rs  main.rs  registry.rs  server.rs  session.rs  storage.rs  summary.rs  types.rs
src/indexer/: describe.rs  discovery.rs  mod.rs  symbols.rs
website/: CNAME  index.html  site.toml
website/_data/: docs.yaml  nav.yaml
website/static/css/: style.css
website/static/js/: main.js
website/templates/: _base.html  docs.html  index.html
website/templates/_partials/: effects.html  footer.html  nav.html
